bug 1270795 - do not generate any background items in glyph path generating process; r=jfkthame

MozReview-Commit-ID: GbhxyY93Vur